# controle-casas

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_config_administradora.py  0003_morador_adulto.py  0004_morador_idade.py  0005_enable_rls.py  0006_cascade_deletes.py  0007_documentos.py  0008_morador_parentesco_sexo.py  0009_extrato_pagamento.py  0010_rls_extrato_pagamento.py  0011_aluguel_recorrencia.py
backend/app/: deps.py  main.py
backend/app/core/: config.py  db.py  security.py  storage.py
backend/app/domain/: competencia.py  money.py  rateio.py
backend/app/models/: __init__.py  aluguel.py  base.py  casa.py  configuracao.py  conta.py  despesa.py  documento.py  extrato.py  morador.py  terreno.py
backend/app/routers/: alugueis.py  auth.py  casas.py  config.py  contas.py  dashboard.py  despesas.py  documentos.py  extratos.py  ia.py  moradores.py  rateios.py  relatorio.py  terrenos.py
backend/app/schemas/: aluguel.py  auth.py  casa.py  common.py  config.py  conta.py  despesa.py  documento.py  extrato.py  ia.py  morador.py  relatorio.py  terreno.py
backend/app/services/: aluguel_recorrencia.py  config.py  ia.py  moradores.py
backend/scripts/: seed.py  setup_supabase_storage.py
backend/tests/: conftest.py  test_api.py  test_competencia.py  test_money.py  test_rateio.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json
scripts/: dev-api.mjs
(+53 files in other folders)
